--- a/payment-landing-page/payment-landing-page/index.html
+++ b/payment-landing-page/payment-landing-page/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="style.css" rel="stylesheet">
+  <script src="script.js" defer></script>
+  <title>Payment Landing Page</title>
 </head>
-
 <body>
-
+  <div id="menu" class="btn1" onclick="myFunction()">
+    <div class="icon-left"></div>
+    <div class="icon-right"></div>
+  </div>
+  <p>START SAVING MONEY</p>
+  <h1>Smart Credit Card For your Daily Life.</h1>
+  <button type="button">Download</button>
+  <img src="design/Hero Image.png">
 </body>
-
 </html>
