--- a/payment-landing-page/payment-landing-page/index.html
+++ b/payment-landing-page/payment-landing-page/index.html
@@ -9,6 +9,7 @@
   <title>Payment Landing Page</title>
 </head>
 <body>
+  <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="position: absolute;z-index: 2; top: 2vh; left: 5vw;"><circle cx="12" cy="12" r="10"></circle><rect x="9" y="9" width="6" height="6"></rect></svg>
   <div id="myNav" class="overlay">
     <div class="overlay-content">
       <a href="#">About</a>
@@ -21,9 +22,13 @@
     <div class="icon-left"></div>
     <div class="icon-right"></div>
   </div>
-  <p>START SAVING MONEY</p>
-  <h1>Smart Credit Card For your Daily Life.</h1>
-  <button type="button">Download</button>
+  <div id="content">
+    <p>START SAVING MONEY</p>
+    <h1>Smart Credit Card For your Daily Life.</h1>
+    <button type="button">Download
+      <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"> <circle cx="12" cy="12" r="10"/><path d="M16 12l-4 4-4-4M12 8v7"/></svg>
+    </button>
+  </div>
   <img id="hero-image" src="design/Hero Image.png">
 </body>
 </html>
