--- a/payment-landing-page/payment-landing-page/index.html
+++ b/payment-landing-page/payment-landing-page/index.html
@@ -12,10 +12,13 @@
   <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="position: absolute;z-index: 2; top: 2vh; left: 5vw;"><circle cx="12" cy="12" r="10"></circle><rect x="9" y="9" width="6" height="6"></rect></svg>
   <div id="myNav" class="overlay">
     <div class="overlay-content">
-      <a href="#">About</a>
-      <a href="#">Services</a>
-      <a href="#">Clients</a>
-      <a href="#">Contact</a>
+      <a href="#">Features</a>
+      <a href="#">Pricing</a>
+      <a href="#">Help</a>
+      <a href="#">Blog</a>
+      <a href="#">About us</a>
+      <a href="#">Log In</a>
+      <a href="#">Sign Up</a>
     </div>
   </div>
   <div id="menu" class="btn1" onclick="myFunction(); openNav()">
@@ -26,7 +29,7 @@
     <p>START SAVING MONEY</p>
     <h1>Smart Credit Card For your Daily Life.</h1>
     <button type="button">Download
-      <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"> <circle cx="12" cy="12" r="10"/><path d="M16 12l-4 4-4-4M12 8v7"/></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-left: 4px;"> <circle cx="12" cy="12" r="10"/><path d="M16 12l-4 4-4-4M12 8v7"/></svg>
     </button>
   </div>
   <img id="hero-image" src="design/Hero Image.png">
