--- a/payment-landing-page/payment-landing-page/index.html
+++ b/payment-landing-page/payment-landing-page/index.html
@@ -12,7 +12,7 @@
   <title>Payment Landing Page</title>
 </head>
 <body>
-  <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="position: absolute;z-index: 2; top: 2vh; left: 5vw;"><circle cx="12" cy="12" r="10"></circle><rect x="9" y="9" width="6" height="6"></rect></svg>
+  <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="position: absolute;z-index: 2; top: 3vh; left: 5vw;"><circle cx="12" cy="12" r="10"></circle><rect x="9" y="9" width="6" height="6"></rect></svg>
   <div id="myNav" class="overlay">
     <div class="overlay-content">
       <a href="#">Features</a>
@@ -20,8 +20,10 @@
       <a href="#">Help</a>
       <a href="#">Blog</a>
       <a href="#">About us</a>
-      <a href="#">Log In</a>
-      <a href="#">Sign Up</a>
+      <div class="account-buttons">
+        <a href="#">Log In</a>
+        <a href="#">Sign Up</a>
+      </div>
     </div>
   </div>
   <div id="menu" class="btn1" onclick="myFunction(); openNav()">
